Since 0.1.8
  - select a message when entering a folder with the G key

0.1.8
  - bug fix: the M and I keys were incorrectly captured

0.1.7
  - limit the width of the nostalgy label (which displays the default
    folder) to avoid horizontal overflow of TB's window
  - hide the nostalgy input box when blurred (does not work very well)

0.1.6
  - add the rule system (quick selection of a default folder for messages)
  - add the Ctrl-Left/Ctrl-Right keys (scroll the message while the
    thread pane is focused)
  - change pane-navigation commands (see about.xhtml)
  - focus the thread pane when opening a folder with the G key
  - add Esc-I to focus the search box

0.1.5
  - add the commands:
    L: hide/show the folder pane
    Ctrl-Escape: set focus on the folder pane
    Alt-Escape: set focus on the message pane
    double Escape (within 200ms): set focus on the thread pane
  - allow the (S)ave and (C)opy to work from a standalone message window
  - add a custom About box for the extension

0.1.4
  - fixed this bug: folders where duplicated in the completion
    box as many times as there were POP3 accounts stored together
    with the "Local Mail" account.

0.1.3
  - better displayed names for folder (no more %20 for local folders)
  - better treatment of Escape

0.1.2
  - fix the double return bug
